--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,47 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    -->    
     <title>Word Reading beta</title>
   </head>
-  <body>
+  <body class="logged-out env-production page-responsive f4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div>react index.html</div>
-    <p>How is everything going with you?? Hearing that you have a plan to learn Chinese, I am writing to you to recommend a university where you can absolutely have a fruitful learning experience.</p>
-    <div id="root"></div>
+    <div id="wrp-head" style="display:none;border:0px;background-color:transparent;"> </div>
+    <div id="wrp-root">
+        <style>
+                body{
+                  font-size:12px;
+                }
+                .wrp-app-logo-container{
+                    text-align:center;
+                    padding:5em 0;
+                    display:flex;
+                    justify-content:center;
+                    align-items:center;
+                    flex-wrap:wrap;
+                }
+                .wrp-app-logo{
+                    width:5em;
+                    height:5em;
+                    border-radius:0.5em;
+                    margin:0 0.5em;
+                }
+                .wrp-app-logo-title{
+                    line-height:5em;
+                    display:inline;
+                    margin:0 0.5em;
+                }
+            </style>
+        <div class="wrp-app-logo-container">
+            <img class="wrp-app-logo" src="%PUBLIC_URL%/logo.png" />
+            <h1 class="wrp-app-logo-title">Word Reading Pro</h1>
+        </div>
+    </div>
+    
+    <div id="wrp-backup" style="display:none;border:0px;background-color:transparent;">
+      
+    </div>
+    <!--script src="https://code.jquery.com/jquery-3.5.1.min.js"></script-->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
