--- a/test_index.html
+++ b/test_index.html
@@ -4,22 +4,8 @@
     <body>
         <h1>react.js</h1>
         <divid="root"></div>
-
-
-
-        <!-- 加载 React。-->
-        <!-- 注意: 部署时，将 "development.js" 替换为 "production.min.js"。-->
-        <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
-        <!-- 加载我们的 React 组件。-->
-        <script src="src/components/explainPanel.js"></script>
-        <script src="src/components/readPanel.js"></script>
-        <script src="src/components/word.js"></script>
-        <script src="src/components/translatePanel.js"></script>
         
-        <script src="src/App.js"></script>
-        
-        <script src="src/index.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     </body>
 </html>
