--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body class="logged-out env-production page-responsive f4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="wrp-head" style="display:none;border:0px;background-color:transparent;"> </div>
+    <!-- <div id="wrp-head" style="display:none;border:0px;background-color:transparent;"> </div> -->
     <div id="wrp-root">
         <style>
                 body{
