--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->    
     <title>Word Reading beta</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-51ND7RKJMM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-51ND7RKJMM');
+    </script>
+    
   </head>
   <body class="logged-out env-production page-responsive f4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
