--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="移动端网页查词、翻译，英文文章阅读从未如此简单。点击即可便捷查词，横向滑即可便捷翻译。"
     />
+    <meta name="keywords" content="查词, 划词, 翻译, 移动端, 机器翻译, 划词阅读, 手机端" />
     <link rel="apple-touch-icon" href="logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->    
-    <title>Word Reading beta</title>
+    <title>Word Reading Beta|划词阅读</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-51ND7RKJMM"></script>
@@ -66,7 +67,7 @@
                 }
             </style>
         <div class="wrp-app-logo-container">
-            <img class="wrp-app-logo" src="%PUBLIC_URL%/logo.png" />
+            <img class="wrp-app-logo" src="%PUBLIC_URL%/logo.png" alt="word reading pro logo." />
             <h1 class="wrp-app-logo-title">Word Reading Pro</h1>
         </div>
     </div>
