--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -10,37 +10,14 @@
       content="移动端网页查词、翻译，英文文章阅读从未如此简单。点击即可便捷查词，横向滑即可便捷翻译。"
     />
     <meta name="keywords" content="查词, 划词, 翻译, 移动端, 机器翻译, 划词阅读, 手机端" />
+    <meta name="wordreadingpro" content="beta@v0.0.1" />
     <link rel="apple-touch-icon" href="logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->    
     <title>Word Reading Beta|划词阅读</title>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-51ND7RKJMM"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-51ND7RKJMM');
-    </script>
     
   </head>
   <body class="logged-out env-production page-responsive f4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <div id="wrp-head" style="display:none;border:0px;background-color:transparent;"> </div> -->
     <div id="wrp-root">
         <style>
                 body{
@@ -71,16 +48,5 @@
             <h1 class="wrp-app-logo-title">Word Reading Pro</h1>
         </div>
     </div>
-    <!--script src="https://code.jquery.com/jquery-3.5.1.min.js"></script-->
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
