--- a/packages/extension/src/pages/Popup/popup.html
+++ b/packages/extension/src/pages/Popup/popup.html
@@ -1,5 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
     <body>
         <div id="root"></div>
     </body>
